spacing issues

--- a/styles/work.css
+++ b/styles/work.css
@@ -77,6 +77,7 @@
     flex-direction: column;
     position: relative;
     align-items: center;
+    margin-bottom: 2rem;
 }
 
 .youtube {
